fix the direction of car on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -26,14 +26,76 @@ a:visited {
   color: #5000F1;
 }
 
-.homesection  h2 {
-  font-size: 15px;
+/*----------------------------------
+  Home Section (section 1)
+------------------------------------*/
+
+/*background transport animation*/
+@keyframes slideleft {
+    0%{transform: translateX(-66.6666%); } 
+}
+@-webkit-keyframes slideleft {
+  0%{transform: translateX(-66.6666%); } 
+}
+
+.bg{
+    height: 100vh;
+
+    overflow: hidden;
+    position: relative;
+
+}
+#bg2 {
+    background-image: url('../images/background2.png');
+    background-repeat: repeat-x;
+    animation: slideleft 600s infinite linear;
+    -webkit-animation: slideleft 600s infinite linear;
+    width: 3000%;
+    height: 100vh;
+    z-index: 2;
+    position: absolute;
+    background-size: auto 100%;
+}
+#bg1 {
+    background-image: url('../images/background1.png');
+    background-repeat: repeat-x;
+    animation: slideleft 800s infinite linear;
+    -webkit-animation: slideleft 800s infinite linear;
+    width: 3000%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1;
+    background-size: auto 100%;
+
+}
+#bg3 {
+    background-image: url('../images/background3.png');
+    background-repeat: repeat-x;
+    animation: slideleft 300s infinite linear;
+    -webkit-animation: slideleft 300s infinite linear;
+    width: 3000%;
+    height: 100vh;
+    position: absolute;
+    z-index: 3;
+    background-size: auto 100%;
+
+}
+
+
+/*text layer*/
+
+.homesection{
+  z-index: 4;
+  position: absolute;
+  width: 100%;
+}
+
+/*our team*/
+.homesection  a h2 {
+    font-size: 15px;
   letter-spacing: 0.15em;
   margin-top: 30px;
-  clear: #022D41;
-}
-.homesection  a h2 {
-  color: #222;
+  color: #022D41;
 }
 .homesection  a h2 span {
   transition: all 400ms cubic-bezier(0.68, -0.1, 0.265, 1.55);
@@ -42,34 +104,14 @@ a:visited {
   color: #fff;
   margin-left: 10px;
 }
-.homesection  .white-block {
-  margin-top: 20px;
+.homesection .white-block {
+  margin-top: 10px;
   width: 46px;
   height: 6px;
   background: #00F1C9;
   margin-bottom: 20px;
 }
-.homesection .text{
-   position:absolute;
-   top: 40%;
-   
-}
-.homesection h1 {
-  color: #1AA6B7;
-  font-family: SignPainter;
-  font-size: 96px;
-  font-weight: 900;
-  letter-spacing: 0.1em;
-  margin: 0 auto;
-  top: 50%;
-}
-.homesection h1 span {
-  display: inline-block;
-  font-size: 20px;
-  margin-top: 18px;
-  vertical-align: top;
-  letter-spacing: 0;
-}
+
 .homesection .title a {
   display: inline-block;
   margin-top: 6px;
@@ -87,9 +129,37 @@ a:visited {
   margin-right: -80px;
   padding: 0px 10px;
 }
-.homesection h3 {
-  font-size: 21px;
+
+
+/*left part text*/
+.homesection .text{
+   position:absolute;
+   top: 40%;
+   
 }
+.homesection h1 {
+  color: #1AA6B7;
+  font-family: SignPainter;
+  font-size: 96px;
+  font-weight: 900;
+  letter-spacing: 0.1em;
+  margin: 0 auto;
+  top: 50%;
+}
+
+.homesection .text h2 {
+  font-size: 15px;
+  letter-spacing: 0.15em;
+  margin-top: 30px;
+  clear: #022D41;
+}
+
+/*phone resize*/
+.phone_size{
+  width: 60%;
+}
+
+
 
 
 /*----------------------------------
@@ -102,7 +172,7 @@ a:visited {
   width: 100%;
 }
 .white-background {
-  
+  overflow: hidden;
   background-color: white;
 }
 
@@ -118,69 +188,6 @@ a:visited {
   z-index: -1;
   margin-top: -220px;
   margin-left: 100px;
-}
-@keyframes slideleft {
-    from {
-        background-position: 0%;
-    }
-    
-    to {
-        background-position: 9000%;
-    }
-}
-
-@-webkit-keyframes slideleft {
-    from {
-        background-position: 0%;
-    }
-    to {
-        background-position: 9000%;
-    }
-}
-.bg{
-    height: 100vh;
-    margin-left:-15px;
-}
-#bg2 {
-    background-image: url('../images/background2.png');
-    background-repeat: repeat-x;
-    animation: slideleft 600s infinite linear;
-    -webkit-animation: slideleft 600s infinite linear;
-    width: 100%;
-    height: 100vh;
-    z-index: 2;
-    position: absolute;
-    background-size: auto 100%;
-
-}
-#bg1 {
-    background-image: url('../images/background1.png');
-    background-repeat: repeat-x;
-    animation: slideleft 800s infinite linear;
-    -webkit-animation: slideleft 800s infinite linear;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    z-index: 1;
-    background-size: auto 100%;
-
-}
-#bg3 {
-    background-image: url('../images/background3.png');
-    background-repeat: repeat-x;
-    animation: slideleft 300s infinite linear;
-    -webkit-animation: slideleft 300s infinite linear;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    z-index: 3;
-    background-size: auto 100%;
-
-}
-.homesection{
-  z-index: 4;
-  position: absolute;
-  width: 100%;
 }
 
 
@@ -220,9 +227,7 @@ main,
 
 
 
-.phone_size{
-  width: 60%;
-}
+
 
 .lg-green {
   width: 60px;
